2009-10-10  Gerald Pfeifer  <gerald@pfeifer.com>

	* faq.html: Rework reference to "other OpenSource projects".

2009-04-04  Gerald Pfeifer  <gerald@pfeifer.com>

	* news.html: Remove broken link to Thomas Fitzsimmons'
	screenshots of Slime Volleyball.

2008-10-25  Gerald Pfeifer  <gerald@pfeifer.com>

	* projects.html: Remove broken link to http://www.mozilla.org/oji/.

2008-03-22  Gerald Pfeifer  <gerald@pfeifer.com>

	* projects.html: Remove broken link to benchmarks compiled by
	Bryce McKinlay.
	
2007-10-29  Gerald Pfeifer  <gerald@pfeifer.com>

	* papers/gcc-java.html: Make Per Bothner's old address plain text
	instead of a link.

2007-10-15  Gerald Pfeifer  <gerald@pfeifer.com>

	* java/papers/gcc-java.html: Make markup XHTML 1.1 compliant.

2007-09-08  Gerald Pfeifer  <gerald@pfeifer.com>

	* done.html (Swarm): Adjust URL.

2007-02-18  Gerald Pfeifer  <gerald@pfeifer.com>

	* done.html (H2 Database Engine): Fix mailto: URL.

2007-01-09  Tom Tromey  <tromey@redhat.com>

	* index.html: Mention ecj merge.

2006-12-28  Gerald Pfeifer  <gerald@pfeifer.com>

	* jni-kaffe.txt: Fix spelling of Red Hat.
	* jni-comp.txt: Ditto.

2006-11-12  Gerald Pfeifer  <gerald@pfeifer.com>

	* projects.html: Remove links to jMocha page which is gone without
	replacement.

2006-10-23  Gerald Pfeifer  <gerald@pfeifer.com>

	* news.html: Update link to the January 2003 Linux Journal article.

2006-09-29  Joel Dice  <dicej@mailsnare.net>

	* index.html: Mention micro-libgcj release.

2006-07-02  Gerald Pfeifer  <gerald@pfeifer.com>

	* index.html: Shorten introduction.  Rotate some news...
	* news.html: ...to here.

2006-07-01  Gerald Pfeifer  <gerald@pfeifer.com>

	* index.html: Rotate news from here...
	* news.html: ...to here.
	Minor formatting changes.

2006-07-01  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* news.html: Untablify, and use CSS formatting instead.

2006-07-01  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* done.html: Fix link to the Tamanoir project.