@@ -37,6 +37,11 @@ href="http://www.gnu.org/software/gdb/">GNU Debugger</a> support GCJ
 <!-- News entries start here -->
 
 <dl class="news">
+<dt>September 22, 2009</dt>
+<dd>GCJ support on Windows (Cygwin and MinGW) targets has been enhanced
+with a number of bugfixes, and the option to build libgcj in DLL form
+for dynamic runtime linking.</dd>
+
 <dt>March 30, 2007</dt>
 <dd>Keith Seitz and Kyle Galloway have made considerable progress on 
 GCJ's implementation of the JDWP.  It is now possible to use eclipse
