@@ -1,3 +1,7 @@
+2009-10-20  Dave Korn  <dave.korn.cygwin@gmail.com>
+
+	* index.html: Mention recent windows updates.
+
 2009-10-10  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* faq.html: Rework reference to "other OpenSource projects".
